--- a/plugin.xml
+++ b/plugin.xml
@@ -62,10 +62,11 @@
             <source-file src="src/android/net/londatiga/android/bluebamboo/util/Util.java" target-dir="src/net/londatiga/android/bluebamboo/util/" />
             
             <js-module src="p25printer.js" name="p25printer">
+                <clobbers target="window.p25Print" />
                 <runs />
             </js-module>
             <info>
-                This plugin is only applicable for versions of cordova-android greater than 4.0. If you have a previous platform version, you do *not* need this plugin since the whitelist will be built in.
+                This plugin is only applicable for Bluebamboo p25 printers. contact akshaydwivedi@live.com for support
             </info>
         </platform>
 
