--- a/plugin.xml
+++ b/plugin.xml
@@ -30,8 +30,8 @@
 
         <platform name="android">
             <config-file target="res/xml/config.xml" parent="/*">
-                <feature name="p25printer">
-                    <param name="android-package" value="net.londatiga.android.bluebamboo" />
+                <feature name="P25Print">
+                    <param name="android-package" value="net.londatiga.android.bluebamboo.P25Print" />
                     <param name="onload" value="true" />
                 </feature>
             </config-file>
